// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="http://una.org"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://una.org
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="http://bryce.name"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://bryce.name
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://barbara.net"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://barbara.net
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="http://beatrice.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://beatrice.com
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://jayde.us"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://jayde.us
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://www.google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://www.google.com
  </a>
</DocumentFragment>
`;
